--- a/style.css
+++ b/style.css
@@ -3,74 +3,123 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Open Sans", sans-serif;
 }
 
 .flex {
     display: flex;
 }
 
-.w-60 {
-    width: 60%;
+.w-55 {
+    width: 55%;
     margin: 0 auto;
 }
 
-.debug .bg-blu-home-page,
-.debug .bg-white-home-page,
-.debug .business-choice div {
-    min-height: 150px;
+.button-blue {
+    background-color: #0061FF;
+    color: white;
+    border: 0;
+    padding: 0.5rem 0.7rem;
+}
+
+
+header a:hover {
+    border-bottom: 1px solid black;
 }
 
 /* +++++++++++++++++++++++ HEADER STYLE +++++++++++++++++++++++ */
 
 header {
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    height: 3rem;
     /* display: flex; */
     justify-content: space-between;
     align-items: center;
-    background-color: aqua;
+    background-color: white;
 }
 
-.left-header {
+.left-header,
+.right-header {
     /* display: flex; */
     align-items: center;
-    background-color: blue;
 }
 
-.right-header {
-    background-color: green;
+img {
+    background-color: black;
+    margin: 0 1rem;
 }
 
 header a {
-    background-color: red;
-    padding: 0.5rem;
+    text-decoration: none;
+    color: black;
+    font-size: 0.7rem;
+    padding: 0.8rem 0.5rem 0.8rem;
 }
 
-/* +++++++++++++++++++++++ HEADER STYLE +++++++++++++++++++++++ */
+.right-header button {
+    margin: 0 0.5rem;
+}
+
+
+/* +++++++++++++++++++++++ HOME PAGE STYLE +++++++++++++++++++++++ */
+main {
+    padding-top: 3rem;
+}
+
 .home-page {
     position: relative;
 }
 
 .bg-blu-home-page {
+    height: 90%;
     width: 100%;
-    background-color: green;
+    background-color: #B4D0E7;
+    position: absolute;
+    top: 0;
 }
 
 .bg-white-home-page {
+    height: 10%;
     width: 100%;
     background-color: blueviolet;
+    position: absolute;
+    bottom: 0;
 }
 
+/* ???????  */
 .container-home-page {
-    position: absolute;
-    top: 1rem;
-    left: calc(30% / 2);
+    position: relative;
     width: 70%;
-    height: 180px;
+    margin: 0 auto;
     background-color: red;
 }
 
-.testo-btn {
+.container-home-page h1 {
+    font-size: 4rem;
+    padding: 3rem 0;
+}
+
+.text-btn-home-page {
     width: 30%;
     background-color: yellow;
+}
+
+.text-btn-home-page button {
+    display: block;
+    margin: 1.5rem 0;
+}
+
+.text-btn-home-page a {
+    text-decoration: none;
+    color: black;
+}
+
+.fa-arrow-down {
+    display: block;
+    font-size: 2rem;
+    margin-top: 2rem;
 }
 
 .img-home-page {
@@ -78,18 +127,91 @@ header a {
     background-color: grey;
 }
 
+.img-home-page img {
+    height: 100%;
+    margin: 0;
+}
+
 /* +++++++++++++++++++++++ PIANO BUSINESS STYLE +++++++++++++++++++++++ */
 .business-box {
     background-color: yellow;
+    margin-top: 3rem;
+}
+
+form h1 {
+    font-size: 2rem;
+    margin-bottom: 2rem;
+}
+
+#f-mensile {
+    margin-right: 1.5rem;
 }
 
 .business-choice {
+    margin-top: 2rem;
     /* display: flex; */
-    justify-content: space-between;
+    align-items: stretch;
+    flex-wrap: wrap;
     gap: 1rem;
 }
 
-.business-choice div {
-    width: calc(100% / 3);
+.business {
+    position: relative;
+    width: calc(96% / 3);
     border: 1px solid black;
+}
+
+.destinatario {
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    border: 1px solid black;
+    padding: 0.5rem;
+    background-color: red;
+}
+
+.destinatario i {
+    margin-right: 0.5rem;
+}
+
+.inner-business {
+    /* margin-top: 4rem; */
+    padding: 4rem 2rem;
+    /* display: flex; */
+    flex-direction: column;
+}
+
+.span-grigio {
+    color: grey;
+    margin-bottom: 2rem;
+}
+
+.inner-business p {
+    margin-bottom: 1rem;
+}
+
+.inner-business i {
+    margin-right: 0.5rem;
+}
+
+.inner-business button {
+    margin: 1.5rem 0;
+}
+
+.inner-business p a {
+    color: blue;
+}
+
+.inner-business h4 {
+    margin-bottom: 2rem;
+}
+
+.riga {
+    width: 25%;
+    border: 1px solid grey;
+    margin: 1.5rem 0 3rem;
+}
+
+.fa-check {
+    color: blue;
 }
