--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ main {
     background-color: #FFD830;
 }
 
+
 .button-blue {
     background-color: #0061FF;
     color: white;
@@ -56,23 +57,17 @@ main {
     padding: 0.5rem 0.7rem;
 }
 
-
-header a:hover {
-    border-bottom: 1px solid black;
-}
-
 /* +++++++++++++++++++++++ HEADER STYLE +++++++++++++++++++++++ */
 
 header {
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     width: 100%;
     height: 3rem;
     background-color: white;
     /* display: flex; */
     justify-content: space-between;
     align-items: center;
-    ;
 }
 
 .left-header,
@@ -81,8 +76,8 @@ header {
     align-items: center;
 }
 
-img {
-    margin: 1rem;
+#logo-dropbox {
+    transform: scale(0.7);
 }
 
 header a {
@@ -96,35 +91,20 @@ header a {
     margin: 0 0.5rem;
 }
 
+header a:hover {
+    border-bottom: 1px solid black;
+}
+
 /* +++++++++++++++++++++++ HOME PAGE STYLE +++++++++++++++++++++++ */
 
 .home-page {
-    position: relative;
-}
-
-.bg-blu-home-page {
-    height: 85%;
-    width: 100%;
     background-color: #B4D0E7;
-    position: absolute;
-    top: 0;
 }
 
-.bg-white-home-page {
-    height: 15%;
-    width: 100%;
-    /* background-color: blueviolet; */
-    position: absolute;
-    bottom: 0;
-}
-
-/* ???????  */
 .container-home-page {
-    position: relative;
     max-width: 1400px;
     width: 70%;
     margin: 0 auto;
-    /* background-color: red; */
 }
 
 .container-home-page h1 {
@@ -134,7 +114,6 @@ header a {
 
 .text-btn-home-page {
     width: 30%;
-    /* background-color: yellow; */
 }
 
 .text-btn-home-page button {
@@ -154,8 +133,8 @@ header a {
 }
 
 .img-home-page {
+    z-index: 1;
     width: 70%;
-    /* background-color: grey; */
 }
 
 .img-home-page img {
@@ -166,10 +145,16 @@ header a {
 }
 
 /* +++++++++++++++++++++++ PIANO BUSINESS STYLE +++++++++++++++++++++++ */
-.business-box {
-    /* background-color: yellow; */
-    margin-top: 3rem;
+.separatore {
+    background-color: white;
+    width: 100%;
+    height: 5rem;
+    position: relative;
+    top: -5rem;
+    z-index: 0;
 }
+
+
 
 form h1 {
     font-size: 2rem;
@@ -199,7 +184,6 @@ form h1 {
     text-align: center;
     border-bottom: 1px solid black;
     padding: 0.5rem;
-    /* background-color: red; */
 }
 
 .destinatario i {
@@ -257,7 +241,6 @@ form h1 {
     margin-top: 1rem;
     padding-bottom: 2rem;
     border: 1px solid black;
-    /* background-color: green; */
 }
 
 .office-contact>p {
@@ -289,7 +272,6 @@ form h1 {
 
 .find-partner {
     margin: 6rem auto 8rem;
-    /* background-color: blue; */
 }
 
 .left-box-60 {
@@ -300,7 +282,6 @@ form h1 {
     object-fit: cover;
     width: 100%;
     height: 100%;
-    display: block;
     margin: 0;
 }
 
@@ -333,18 +314,15 @@ form h1 {
     /* display: flex; */
     justify-content: space-between;
     flex-wrap: wrap;
-    /* background-color: violet; */
 }
 
 .inner-card {
     width: 32%;
     padding-bottom: 4rem;
-    /* background-color: yellow; */
 }
 
 .inner-card img {
     width: 100%;
-    display: block;
     margin: 0;
 }
 
@@ -376,24 +354,28 @@ form h1 {
     width: calc(100% / 3);
     /* display: flex; */
     flex-wrap: wrap;
-    height: 60vh;
 }
 
-.partnership-img {
-    /* display: flex; */
+.partnership {
     width: 50%;
-    height: 50%;
-    /* aspect-ratio: 1; */
 }
 
-.partnership-img:hover {
+.inner-partnership {
+    padding-top: 100%;
+    position: relative;
+}
+
+.partnership img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    filter: invert(1);
+}
+
+.partnership:hover {
     border: 1rem solid rgba(0, 0, 0, 0.1);
-}
-
-.partnership-img img {
-    width: 50%;
-    margin: auto;
-    filter: invert();
 }
 
 .center-partner-box {
